--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                     <h1 class="title is-1">Key Ideas & Design</h1>
                     <div class="content has-text-justified">
                         <p>
-                            The key behind ABC's training is that we pretrain the model using a large dataset of
+                            ABC is designed to give the user maximum control over how images are represented. ABC is trained to be able to use natural language instructions to <i>represent specific aspects of images.</i> The key behind ABC's training is that we pretrain the model using a large dataset of
                             <i>difficult embedding samples</i>, where each batch contains many candidates that are
                             <i>relevant but not quite correct</i> <b>(left)</b>.
                             The pretrained model is therefore able to generate embeddings that capture subtle
@@ -330,20 +330,14 @@
         </div>
     </section>
 
+
     <!-- BibTeX citation -->
     <section class="section" id="BibTeX">
         <div class="container is-max-desktop content">
             <h2 class="title">Reference</h2>
             Please kindly cite our paper if you use our code or results:
-            <pre><code>@misc{wang2025critiquefinetuninglearningcritique,
-      title={Critique Fine-Tuning: Learning to Critique is More Effective than Learning to Imitate},
-      author={Yubo Wang and Xiang Yue and Wenhu Chen},
-      year={2025},
-      eprint={2501.17703},
-      archivePrefix={arXiv},
-      primaryClass={cs.CL},
-      url={https://arxiv.org/abs/2501.17703},
-}</code></pre>
+            <pre><code>{}
+</code></pre>
         </div>
     </section>
 
