add personal webpage links

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
                         </h2>
                         <div class="is-size-5 publication-authors">
                             <span class="author-block">
-                                <sup>♠️</sup>Benjamin Schneider,
+                                <sup>♠️</sup><a href="https://benjaminschneider.ca/">Benjamin Schneider</a>,
                             </span>
                             <span class="author-block">
-                                <sup>♠️</sup>Florian Kerschbaum,
+                                <sup>♠️</sup><a href="https://cs.uwaterloo.ca/~fkerschb/">Florian Kerschbaum</a>,
                             </span>
                             <span class="author-block">
-                                <sup>♠️</sup>Wenhu Chen
+                                <sup>♠️</sup><a href="https://wenhuchen.github.io/">Wenhu Chen</a>
                             </span>
                         </div>
 
@@ -174,7 +174,10 @@
                     <h1 class="title is-1">Key Ideas & Design</h1>
                     <div class="content has-text-justified">
                         <p>
-                            ABC is designed to give the user maximum control over how images are represented. ABC is trained to be able to use natural language instructions to <i>represent specific aspects of images.</i> The key behind ABC's training is that we pretrain the model using a large dataset of
+                            ABC is designed to give the user maximum control over how images are represented. ABC is
+                            trained to be able to use natural language instructions to <i>represent specific aspects of
+                                images.</i> The key behind ABC's training is that we pretrain the model using a large
+                            dataset of
                             <i>difficult embedding samples</i>, where each batch contains many candidates that are
                             <i>relevant but not quite correct</i> <b>(left)</b>.
                             The pretrained model is therefore able to generate embeddings that capture subtle
